Fixed choropleth clipping on small screens

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -85,7 +85,7 @@
 
   /*Switch when width is 610px*/
   .date-select-row {
-    width:420px;
+    width: 420px;
     text-indent: 0px !important;
   }
 }
@@ -127,7 +127,7 @@
   width: 100%;
   max-width: 1000px;
   font-family: Geneva, sans-serif;
-  color:rgb(218, 218, 218);
+  color: rgb(218, 218, 218);
   grid-template-columns: auto repeat(6, 1fr);
   grid-template-rows: repeat(2, auto);
   column-gap: 4px;
@@ -235,12 +235,12 @@
   border-color: rgb(218, 218, 218);
   border-radius: 7px;
 }
+
 .test-wrapper {
-  position:relative;
-  height:60vh;
-  width: 25vw;
+  position: relative;
+  height: 60vh;
+  width: 30vw;
   max-height: 30vw;
-  align-items: center;
 }
 
 .graph-grid-small {
@@ -260,22 +260,39 @@
 
 @media screen and (max-width: 1000px) {
   .graph-grid {
-    display: none; /*Change to none when fixed*/
+    display: none;
+    /*Change to none when fixed*/
   }
 
   .graph-grid-small {
-    display: inline-block; /*Change when small fixed.*/
+    display: inline-block;
+    /*Change when small fixed.*/
+  }
+
+  .test-wrapper {
+    position: relative;
+    height: 60vh;
+    width: 100vw;
+    max-height: 30vw;
   }
 }
 
-.chart, .chart-bar, .chart-areabump, .chart-chord, .chart-choropleth, .chart-treemap, .chart-pie, .chart-funnel {
-  padding:20px;
+.chart,
+.chart-bar,
+.chart-areabump,
+.chart-chord,
+.chart-choropleth,
+.chart-treemap,
+.chart-pie,
+.chart-funnel {
+  padding: 20px;
   height: 25vh;
 }
 
-.chart-sector{
-  padding:20px;
+.chart-sector {
+  padding: 20px;
 }
+
 @media screen and (max-width: 822px) {
   .dashboard-data-grid {
     justify-items: start;
@@ -292,6 +309,6 @@
   }
 
   .btn-group {
-    width:20%
+    width: 20%
   }
 }
